--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <section>
                 <h2>Tea of the Month</h2>
                 <h4>What's Steeping at The Tea Cozy?</h4>
-            <section>
+            </section>
             <div class="menu">
                 <div class="row">
                     <img class="tea-pic" src="img/berryblitz.jpeg" alt="Fall Berry Blitz Tea">
