--- a/index.html
+++ b/index.html
@@ -37,26 +37,26 @@
                 <h4>What's Steeping at The Tea Cozy?</h4>
             </section>
             <div class="menu">
-                <div class="row">
+                <figure>
                     <img class="tea-pic" src="img/berryblitz.jpeg" alt="Fall Berry Blitz Tea">
                     <figcaption>Fall Berry Blitz Tea</figcaption>
-                </div>
-                <div class="row">
+                </figure>
+                <figure>
                     <img class="tea-pic" src="img/spiced-rum.jpeg" alt="Spiced Rum Tea">
                     <figcaption>Spiced Rum Tea</figcaption>
-                </div>
-                <div class="row">
+                </figure>
+                <figure>
                     <img class="tea-pic" src="img/donut.jpeg" alt="Seasonal Donuts">
                     <figcaption>Seasonal Donuts</figcaption>
-                </div>
-                <div class="row">
+                </figure>
+                <figure>
                     <img class="tea-pic" src="img/myrtle-ave.jpeg" alt="Myrtle Ave Tea">
                     <figcaption>Myrtle Ave Tea</figcaption>
-                </div>
-                <div class="row">
+                </figure>
+                <figure>
                     <img class="tea-pic" src="img/bedford-bizarre.jpeg" alt="Bedford Bizarre Tea">
                     <figcaption>Bedford Bizarre Tea</figcaption>
-                </div>
+                <figure>
             </div>    
             <!-- This container holds Locations information -->
             <div class="container locations">
