--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <figure>
                     <img class="tea-pic" src="img/bedford-bizarre.jpeg" alt="Bedford Bizarre Tea">
                     <figcaption>Bedford Bizarre Tea</figcaption>
-                <figure>
+                </figure>
             </div>    
             <!-- This container holds Locations information -->
             <div class="container locations">
