--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="styles.css" rel="stylesheet" type="text/css">
-        <link href="tablet.css" rel="stylesheet" type="text/css">
-        <link href="mobile.css" rel="stylesheet" type="text/css">
+        <!-- <link href="tablet.css" rel="stylesheet" type="text/css">
+        <link href="mobile.css" rel="stylesheet" type="text/css"> -->
     </head>
 
     <body>
